fix center align on wiki

--- a/app/assets/stylesheets/components/_wikis.scss
+++ b/app/assets/stylesheets/components/_wikis.scss
@@ -15,7 +15,7 @@ section#wikis {
     .histories {
       color: $gray;
     }
-    p {
+    p#no-content {
       text-align: center;
       font-size: 18px;
       margin: 50px auto;
